tests/ui/const-generics/generic_const_exprs/unknown-alias-defkind-anonconst-ice-116710.stderr
error[E0423]: cannot find value `u8` in this scope
  --> $DIR/unknown-alias-defkind-anonconst-ice-116710.rs:6:43
   |
LL | struct A<const N: u32 = 1, const M: u32 = u8>;
   |                                           ^^ not found in this scope
   |
   = note: a builtin type named `u8` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
